# sentryc-

./: .gitignore  CMakeLists.txt  SENTRY_CPP_SETUP_MANUAL.html  main.cpp  sentry.cpp
include/: platform.hpp  request.hpp  response.hpp  router.hpp  server.hpp  thread_pool.hpp
src/: request.cpp  response.cpp  router.cpp  server.cpp
static/: index.html
